fixed reloading issue on mobile

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -167,7 +167,6 @@ html, body {
       font-size: 1.5em;
       text-align: center;
       .questions {
-        height: 0;
         color: $primary-color;
         margin-top: 0;
         margin-bottom: 0;
